总算没bug能train了。 但是loss比bigram还高，而且generate的效果也乱七八糟，没有体现应有效果

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -1520,11 +1520,22 @@
         "    def generate(self, idx, max_new_tokens=50):\n",
         "\n",
         "        for step in range(max_new_tokens):\n",
-        "            logits, loss = self(idx)\n",
-        "            logits = logits[:, -1, :]\n",
+        "            _B, seq_len = idx.shape\n",
+        "            if seq_len > self.config.T:\n",
+        "                idx_fixedlen = idx[:, -self.config.T:]\n",
+        "                _B, seq_len = idx_fixedlen.shape\n",
+        "            else:\n",
+        "\n",
+        "                padding_len = self.config.T - seq_len\n",
+        "                idx_fixedlen = F.pad(idx, (0, padding_len), \"constant\", 0)\n",
+        "\n",
+        "            logits, loss = self(idx_fixedlen)\n",
+        "            logits = logits[:, seq_len - 1, :]\n",
         "            probs = F.softmax(logits, dim=-1)\n",
         "            idx_next = torch.multinomial(probs, num_samples=1)\n",
         "            idx = torch.cat((idx, idx_next), dim=1)\n",
+        "\n",
+        "        return idx\n",
         "\n",
         "\n",
         "config = GPTConfig({'B': 2, 'T': 16, 'C': 32, 'vocab_size': vocab_size, 'header_size':4, 'headers_num': 1, 'blocks_num': 1, 'ffn_size': 64})\n",
@@ -1546,6 +1557,7 @@
         "\n",
         "xb, yb = get_batch('train')\n",
         "\n",
+        "print('token id 0:' + decode([0]))\n",
         "\n",
         "print(f'xb: {xb.shape}')\n",
         "print(f'vocab_size: {vocab_size}')\n",
@@ -1556,46 +1568,221 @@
         "print(f'logits: {logits}')\n",
         "print(f'loss: {loss}')\n",
         "\n",
-        "gen_idx = torch.tensor([encode('北国风光千里冰封万里雪飘望长城内')], dtype=torch.long)\n",
-        "# print(decode(m.generate(idx = gen_idx, max_new_tokens=500)[0].tolist()))"
+        "gen_idx = torch.tensor([encode('北国风光')], dtype=torch.long)\n",
+        "print(f'gen_idx: {gen_idx.shape}')\n",
+        "print(decode(m.generate(idx = gen_idx, max_new_tokens=500)[0].tolist()))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cFDVvZnLNSD7",
-        "outputId": "3476d6bc-22d0-4a1c-893f-37013675e841"
+        "outputId": "e8468190-c30b-4f4c-c8f9-4ef3c86c5efe"
       },
-      "execution_count": 167,
+      "execution_count": 190,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "token id 0:\n",
+            "\n",
             "xb: torch.Size([2, 16])\n",
             "vocab_size: 2106\n",
             "wpe: Embedding(16, 32)\n",
-            "logits: tensor([[ 3.0014,  4.2063,  5.7059,  ...,  1.4965, -9.0476,  2.5676],\n",
-            "        [-5.2865, -3.5215, -1.9488,  ...,  1.3614,  8.9411,  0.9835],\n",
-            "        [ 5.9982,  0.4664, -0.8919,  ...,  1.4158,  2.5174,  1.2513],\n",
+            "logits: tensor([[    -1.2664,     -0.5163,     -1.1433,  ...,     -2.0868,\n",
+            "             -1.8432,     -1.8784],\n",
+            "        [    -2.3797,      5.5421,      0.6930,  ...,      1.8373,\n",
+            "             -3.2281,      1.3323],\n",
+            "        [     3.2603,      0.9568,      1.7696,  ...,      0.3842,\n",
+            "              0.2573,     -4.2601],\n",
             "        ...,\n",
-            "        [-9.7102, -1.4009, -2.3044,  ...,  1.6325,  6.3662,  0.8073],\n",
-            "        [-4.4870, -1.3596,  2.4521,  ..., -0.2384, -0.7626, -2.0873],\n",
-            "        [ 1.9598,  2.7323, -3.3767,  ...,  5.6264, -7.4139, -0.9122]],\n",
-            "       grad_fn=<ViewBackward0>)\n",
-            "loss: 17.82889747619629\n"
+            "        [     0.0687,     -0.9299,      3.4541,  ...,     -4.5402,\n",
+            "              1.6855,     -4.3918],\n",
+            "        [     3.2439,     -7.8834,     -1.7339,  ...,     -5.4802,\n",
+            "              5.1720,     -3.8045],\n",
+            "        [     6.7759,     -4.5269,     -0.0055,  ...,      4.6046,\n",
+            "              1.9851,     -3.5610]], grad_fn=<ViewBackward0>)\n",
+            "loss: 16.5777645111084\n",
+            "gen_idx: torch.Size([1, 4])\n",
+            "北国风光算片翔弱弓竹蒋面贱清琳辍赣墙群杯盗羞全蜉奈番浣坐楫嶷雌成满瘁舜迫成满头舜墨抓煮利德倒商浴星非怕杯盗头爹浴浣争蚂烂斶首烂摩蜉浴枪吸辍用用群以算表弓朋伤杯盗羞坐壑洁商浴济丰洁商群舜雕瓒议话蚀浴枪争票杨号绝泉撼楫用雌悲舜攻练宫摩蜉奈头吸秋坠烂羞全蜉楫蚀用醒网版杜非怕伤杯床竹成满赣坠耿讶番浣争杯床竹浣墨抓头歌杯盗头吸秋坠烂垓墨醒利尸跤利尸烂铢算浣商浴跌朋伤杯床耿号莺坠群抓苛折议群舜墨抓莺耿杯床竹争号伤辍硬满蚀用耿杯床竹全蜉用坠鹫县伤枇劳耿杯盗头利尸讯醒绝泉发争邦任朋折话墙弄稊密雌诉伤盗头吸谓伤任壑盗头歌盗头定洁作雌抓苛以算奔泉全退商浴枪晏澜县骚杯床旺浴浣成蛙吸恻颇认丰洁商浴枪绝杯床竹洁商浴浣争沆商浴跌朋歌损抓施的杯床的杯盗头吸栽杯床旺蒋成满浴浣浣墨抓苛争邦峥送竹洁坠烂秋！以算伤辍羞用迫巾楫墙耿号伤辍朋成诉踪盗头丰洁晏辍合竹吸谓弓龙竹竹洁想满滩墙绝泉送竹墨奈算浣浣争凋永或伟洁吸述尸跤墙群楫号惟用苛争商浴枪晏全蜉雌固初非步商浴争号伤辍瓦尸盗斶丰莺的做躅抓苛诉央以算壑丰成擦县利尸路羞丰躅尸烂放用迫成醒离浴满浴施的杯瓒的星橙伤杯盗头吸小浣浣浣争凋浴貌躅伟洁首烂用墙弄浣倦汛弓朋折羞谊太群杯床耿杯床群杯床\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)"
+      ],
       "metadata": {
         "id": "VOPpLEioft4q"
       },
-      "execution_count": null,
+      "execution_count": 203,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for step in range(10000):\n",
+        "    xb, yb = get_batch('train')\n",
+        "\n",
+        "    logits, loss = m(xb, yb)\n",
+        "\n",
+        "    optimizer.zero_grad(set_to_none=True)\n",
+        "\n",
+        "    loss.backward()\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "print(loss.item()) # 跑了半天loss 3.x，比bigram的还高"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1wnembm7NmIx",
+        "outputId": "e8bec481-25d5-465d-ef38-b08742836833"
+      },
+      "execution_count": 207,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.204885482788086\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gen_idx = torch.tensor([encode('北国风光')], dtype=torch.long)\n",
+        "print(decode(m.generate(idx = gen_idx, max_new_tokens=500)[0].tolist())) # 实际效果也一般"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WJZssbgYO-Zz",
+        "outputId": "5b261827-541f-4a27-dda9-1464b4c7d100"
+      },
+      "execution_count": 208,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "北国风光，涔泪侵略输文章，搅得好，\n",
+            "千丈壁，三千工农无城跃。\n",
+            "没收安，，\n",
+            "列宁枝过百万木经哀鸿铩羽悲春溜回首分杨柳亚子诗长此关山地十八十六月春汛怒村前堂。\n",
+            "坐地主。\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "怅寥廓，有总年少有早大马诗江南是即东。\n",
+            "\n",
+            "\n",
+            "\n",
+            "屈光天竞自崖君长沙欲何泳一韶山东。\n",
+            "\n",
+            "\n",
+            "蒙首，\n",
+            "党万侣曾北要涎垂跃，时向何依恋。\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "俱奋新郎向杀人，无遗矢韶华忠魂死。\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "人民苦斗，在叫反第一九天红水，\n",
+            "\n",
+            "当年鏖战更旧志\n",
+            "\n",
+            "\n",
+            "\n",
+            "有数万纵横流岁外墟江壮战冕行。\n",
+            "今日，\n",
+            "\n",
+            "\n",
+            "目朽文\n",
+            "\n",
+            "\n",
+            "# 其三十月霜也言诗\n",
+            "\n",
+            "英经武结如零落重霄汉武红军，万里连，入河上有趋君云碰壁。\n",
+            "\n",
+            "四十军。\n",
+            "春。\n",
+            "激看工厂潇。\n",
+            "\n",
+            "唤鹰法，\n",
+            "\n",
+            "各进《夺律二去，败叶纷洪辞浮，中狂。\n",
+            "\n",
+            "\n",
+            "独江河上谁？\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "茫茫闽山直下攀旗叠山有！\n",
+            "\n",
+            "《大关三\n",
+            "\n",
+            "\n",
+            "# 歌共中莽赋《洛茨？\n",
+            "\n",
+            "\n",
+            "旭日了三梦。\n",
+            "# 分析好。\n",
+            "\n",
+            "\n",
+            "\n",
+            "重，诸水，求恩，\n",
+            "蝶恋。\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "## 七十马嘶人，对洲方山下茫茫全国，江国良。\n",
+            "\n",
+            "#今船，业上笔自。\n",
+            "更相向遁；工。\n",
+            "养游泳一》\n",
+            "\n",
+            "\n",
+            "\n",
+            "但悲鸣鸡寻常与评说项，\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "称难在亲越雨，一抒情里，\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "一零连横扫纪律·花·改\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1604,7 +1791,7 @@
       "collapsed_sections": [
         "3BIWez3s2klu"
       ],
-      "authorship_tag": "ABX9TyOIqBX+4nY3zE+HIeC0UY/i",
+      "authorship_tag": "ABX9TyODKPjR0Ky+sNPni4csvbvT",
       "include_colab_link": true
     },
     "kernelspec": {
