调大batch， header_size， block层数，效果不明显

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -1538,7 +1538,7 @@
         "        return idx\n",
         "\n",
         "\n",
-        "config = GPTConfig({'B': 2, 'T': 16, 'C': 32, 'vocab_size': vocab_size, 'header_size':4, 'headers_num': 1, 'blocks_num': 1, 'ffn_size': 64})\n",
+        "config = GPTConfig({'B': 8, 'T': 16, 'C': 32, 'vocab_size': vocab_size, 'header_size':8, 'headers_num': 1, 'blocks_num': 4, 'ffn_size': 64})\n",
         "m = GPT(config)\n",
         "\n",
         "# idx = encode('北国风光')\n",
@@ -1577,9 +1577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cFDVvZnLNSD7",
-        "outputId": "e8468190-c30b-4f4c-c8f9-4ef3c86c5efe"
+        "outputId": "e93e4a51-fe85-49d5-96a4-bf84d0317ccf"
       },
-      "execution_count": 190,
+      "execution_count": 236,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,25 +1587,21 @@
           "text": [
             "token id 0:\n",
             "\n",
-            "xb: torch.Size([2, 16])\n",
+            "xb: torch.Size([8, 16])\n",
             "vocab_size: 2106\n",
             "wpe: Embedding(16, 32)\n",
-            "logits: tensor([[    -1.2664,     -0.5163,     -1.1433,  ...,     -2.0868,\n",
-            "             -1.8432,     -1.8784],\n",
-            "        [    -2.3797,      5.5421,      0.6930,  ...,      1.8373,\n",
-            "             -3.2281,      1.3323],\n",
-            "        [     3.2603,      0.9568,      1.7696,  ...,      0.3842,\n",
-            "              0.2573,     -4.2601],\n",
+            "logits: tensor([[ -9.1847,   4.8155,   5.0895,  ...,   8.9946,  -6.3277,   3.0090],\n",
+            "        [  9.3557,   8.8816,  -1.8856,  ...,   1.7576,  -1.1433,  10.4721],\n",
+            "        [ -4.6170,  -0.6772,   3.4348,  ...,   4.4233,  -2.1719,  14.3350],\n",
             "        ...,\n",
-            "        [     0.0687,     -0.9299,      3.4541,  ...,     -4.5402,\n",
-            "              1.6855,     -4.3918],\n",
-            "        [     3.2439,     -7.8834,     -1.7339,  ...,     -5.4802,\n",
-            "              5.1720,     -3.8045],\n",
-            "        [     6.7759,     -4.5269,     -0.0055,  ...,      4.6046,\n",
-            "              1.9851,     -3.5610]], grad_fn=<ViewBackward0>)\n",
-            "loss: 16.5777645111084\n",
+            "        [  3.1513,  -9.9299,   1.4760,  ...,   0.5489,   2.5099,   4.5253],\n",
+            "        [  6.2446,  -3.7857,  -2.3576,  ...,  -2.8820,   6.9799,  -5.5607],\n",
+            "        [-11.6473,  -0.1737, -12.3899,  ...,   3.3562,  -3.6009, -11.8573]],\n",
+            "       grad_fn=<ViewBackward0>)\n",
+            "loss: 21.646087646484375\n",
             "gen_idx: torch.Size([1, 4])\n",
-            "北国风光算片翔弱弓竹蒋面贱清琳辍赣墙群杯盗羞全蜉奈番浣坐楫嶷雌成满瘁舜迫成满头舜墨抓煮利德倒商浴星非怕杯盗头爹浴浣争蚂烂斶首烂摩蜉浴枪吸辍用用群以算表弓朋伤杯盗羞坐壑洁商浴济丰洁商群舜雕瓒议话蚀浴枪争票杨号绝泉撼楫用雌悲舜攻练宫摩蜉奈头吸秋坠烂羞全蜉楫蚀用醒网版杜非怕伤杯床竹成满赣坠耿讶番浣争杯床竹浣墨抓头歌杯盗头吸秋坠烂垓墨醒利尸跤利尸烂铢算浣商浴跌朋伤杯床耿号莺坠群抓苛折议群舜墨抓莺耿杯床竹争号伤辍硬满蚀用耿杯床竹全蜉用坠鹫县伤枇劳耿杯盗头利尸讯醒绝泉发争邦任朋折话墙弄稊密雌诉伤盗头吸谓伤任壑盗头歌盗头定洁作雌抓苛以算奔泉全退商浴枪晏澜县骚杯床旺浴浣成蛙吸恻颇认丰洁商浴枪绝杯床竹洁商浴浣争沆商浴跌朋歌损抓施的杯床的杯盗头吸栽杯床旺蒋成满浴浣浣墨抓苛争邦峥送竹洁坠烂秋！以算伤辍羞用迫巾楫墙耿号伤辍朋成诉踪盗头丰洁晏辍合竹吸谓弓龙竹竹洁想满滩墙绝泉送竹墨奈算浣浣争凋永或伟洁吸述尸跤墙群楫号惟用苛争商浴枪晏全蜉雌固初非步商浴争号伤辍瓦尸盗斶丰莺的做躅抓苛诉央以算壑丰成擦县利尸路羞丰躅尸烂放用迫成醒离浴满浴施的杯瓒的星橙伤杯盗头吸小浣浣浣争凋浴貌躅伟洁首烂用墙弄浣倦汛弓朋折羞谊太群杯床耿杯床群杯床\n"
+            "北国风光祸慌萨退向摄文莱昏\n",
+            "取梦逸熊爹僧士梦曰暗团适寄坑题题题颂段寄亭题拒落玲竦屠月病食寄坑题梦令庄寄坑题熊梦落紧寄坑题题暗段寄坑题题梦态寄坑题暗题题暗熊亭题题题题暗卿题题题题题仿春竦吹悃切紧寄坑题熊亭题题题仿态寄坑化取僧食寄坑化取寄坑墓愚题题暗段寄坑墓段寄雄僧接春竦暗》题题题题题题暗业僧吹）寄坑墓段寄坑墓段寄坑题熊梦蚩态鬓亭题暗熊题题题题题暗卿付寄坑墓段寄坑墓段寄坑墓愚航话翔题暗夫春竦暗亭暗生乘题暗途讨寄坑墓B亭题题题题题题题题熊剿忧丽寄坑题暗亭题寥免寄豚题熊亭题卿题题暗甚题题颂段寄豚题仿态寄坑广降寄坑题题梦蚩态寄亭题暗亭题暗亭题题题暗亭题题题暗段寄豚剿忧业僧揖寄坑墓段寄坑墓题题熊熊梦僧题暗生碧题暗段寄解蚩态寄态寄坑题题拒题熊亭亭题题亭夏完寄亭题题题熊亭题颂寨僧吹胜题暗亭题暗夫寄坑墓题题题题梦令忡吹大夏闹甚题暗劫题寥乐闹孔遁段寄树僧夏完寄坑题题贺添蚩态寄坑夏完寄亭题决题题题题题亭夏闹孔蜉蔚庄寄落玲亭题梦伦忡个劫亭题题题题题题题题暗劫题寥伴寄坑墓段寄坑墓段寄坑墓愚细寄态寄坑题梦曰暗亭题梦僧爽亭墓段寄坑题题题题暗卿报庄寄坑墓碌讨寄坑墓段寄坑题蚩态僧爽磅夏完寄坑题暗生浮题题题题题题暗亭荐庄寄坑墓段\n"
           ]
         }
       ]
@@ -1618,7 +1614,7 @@
       "metadata": {
         "id": "VOPpLEioft4q"
       },
-      "execution_count": 203,
+      "execution_count": 237,
       "outputs": []
     },
     {
@@ -1635,22 +1631,24 @@
         "\n",
         "    optimizer.step()\n",
         "\n",
-        "print(loss.item()) # 跑了半天loss 3.x，比bigram的还高"
+        "print(loss.item())\n",
+        "# 跑了半天loss 3.x，比bigram的还高。多跑几轮能到2.5，loss有波动\n",
+        "# 增加header_size，blocks_num， batch_size 没啥用"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1wnembm7NmIx",
-        "outputId": "e8bec481-25d5-465d-ef38-b08742836833"
+        "outputId": "73ffd3d5-4c7a-42c5-e737-defe5c6e587e"
       },
-      "execution_count": 207,
+      "execution_count": 258,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3.204885482788086\n"
+            "2.104979991912842\n"
           ]
         }
       ]
@@ -1666,120 +1664,94 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WJZssbgYO-Zz",
-        "outputId": "5b261827-541f-4a27-dda9-1464b4c7d100"
+        "outputId": "b70ad7a7-3ee2-4993-a48d-69774f0268f3"
       },
-      "execution_count": 208,
+      "execution_count": 259,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "北国风光，涔泪侵略输文章，搅得好，\n",
-            "千丈壁，三千工农无城跃。\n",
-            "没收安，，\n",
-            "列宁枝过百万木经哀鸿铩羽悲春溜回首分杨柳亚子诗长此关山地十八十六月春汛怒村前堂。\n",
-            "坐地主。\n",
+            "北国风光迎雨落都又一戎衣犹怨，不怕陈，\n",
+            "以名誓分外打碎。\n",
             "\n",
+            "作手从兹去矣。\n",
             "\n",
+            "有投顺城人未伸，涂脂抹粉上豪门。\n",
+            "好汉奸移位，人影指，过眼血，这强，手向雪。\n",
             "\n",
+            "万木更无白万；大陆放造兹。\n",
             "\n",
             "\n",
+            "可邻居，一高悬崖百丈壁。\n",
             "\n",
             "\n",
+            "# 杂言韵语·筹军饷布告\n",
             "\n",
-            "怅寥廓，有总年少有早大马诗江南是即东。\n",
             "\n",
+            "甫洛甫洛甫真忙。\n",
             "\n",
             "\n",
-            "屈光天竞自崖君长沙欲何泳一韶山东。\n",
+            "段谢版\n",
             "\n",
             "\n",
-            "蒙首，\n",
-            "党万侣曾北要涎垂跃，时向何依恋。\n",
+            "招待遇事，\n",
             "\n",
+            "举世变了张民众。\n",
             "\n",
             "\n",
+            "名也无覆慨而今年，何足莽入五德手，艟艨巨扫大地天地黄昏。\n",
             "\n",
+            "生挟海潮指马？唯我彭大问瘟神。\n",
             "\n",
             "\n",
+            "满江片飘胆誓分为，\n",
             "\n",
-            "俱奋新郎向杀人，无遗矢韶华忠魂死。\n",
             "\n",
+            "目近也号镰动，\n",
             "\n",
+            "十片汪洋天风和，\n",
             "\n",
+            "前进，卫我足虑，没伤情下鞍。\n",
             "\n",
+            "风连图宏图。\n",
             "\n",
+            "口笑谈判事，雪，从来定量，九苍蝇碰壁，衔泥塘。\n",
             "\n",
-            "人民苦斗，在叫反第一九天红水，\n",
             "\n",
-            "当年鏖战更旧志\n",
+            "借问君今一江？\n",
             "\n",
+            "白心表。\n",
             "\n",
+            "感坐潇潇潇连虎踞，\n",
             "\n",
-            "有数万纵横流岁外墟江壮战冕行。\n",
-            "今日，\n",
+            "蚂蚁缘自由收，为时烽，要商量。\n",
+            "铁种壁，妙香山黄信定恨灰烬，快要和，民，与共民，布告四方史人间。\n",
             "\n",
+            "万朵洲同志金汤。\n",
             "\n",
-            "目朽文\n",
             "\n",
+            "此嫩枝谁？\n",
+            "一阵阵线穿南天！\n",
             "\n",
-            "# 其三十月霜也言诗\n",
             "\n",
-            "英经武结如零落重霄汉武红军，万里连，入河上有趋君云碰壁。\n",
+            "不要恐慌奇怪，前行秦皇皇。\n",
             "\n",
-            "四十军。\n",
-            "春。\n",
-            "激看工厂潇。\n",
             "\n",
-            "唤鹰法，\n",
             "\n",
-            "各进《夺律二去，败叶纷洪辞浮，中狂。\n",
+            "豪杰怕熊缚住苍。\n",
             "\n",
             "\n",
-            "独江河上谁？\n",
+            "恨最喜岷山上骋雄辩，莽苍茫闽山，虎踞，何方也虏，鞭众向奋，人间正茂；万军款，好古代曾大手，坚固，阶级叛徒颜。\n",
             "\n",
             "\n",
             "\n",
+            "钟怒血不停。\n",
             "\n",
-            "茫茫闽山直下攀旗叠山有！\n",
+            "一年世，不到处，争传。\n",
             "\n",
-            "《大关三\n",
             "\n",
-            "\n",
-            "# 歌共中莽赋《洛茨？\n",
-            "\n",
-            "\n",
-            "旭日了三梦。\n",
-            "# 分析好。\n",
-            "\n",
-            "\n",
-            "\n",
-            "重，诸水，求恩，\n",
-            "蝶恋。\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "## 七十马嘶人，对洲方山下茫茫全国，江国良。\n",
-            "\n",
-            "#今船，业上笔自。\n",
-            "更相向遁；工。\n",
-            "养游泳一》\n",
-            "\n",
-            "\n",
-            "\n",
-            "但悲鸣鸡寻常与评说项，\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "称难在亲越雨，一抒情里，\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "一零连横扫纪律·花·改\n"
+            "甚三洋\n"
           ]
         }
       ]
@@ -1791,7 +1763,7 @@
       "collapsed_sections": [
         "3BIWez3s2klu"
       ],
-      "authorship_tag": "ABX9TyODKPjR0Ky+sNPni4csvbvT",
+      "authorship_tag": "ABX9TyOntL8QOMA88/oDWkOYq7cZ",
       "include_colab_link": true
     },
     "kernelspec": {
