备注了最后debug发现的问题，打印模型参数量发现太小，有参数没有用nn.ModuleList包裹。

--- a/gpt_mao.ipynb
+++ b/gpt_mao.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "n_fPxK2iaPZD",
         "colab": {
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "U9iboUIQbZll"
       },
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "rVxLO6kDdLl8"
       },
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -302,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "mdqOWRzPdl0z"
       },
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "abYw3i2heML7"
       },
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "CyiU6MpTelc3"
       },
@@ -338,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -478,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "PgUXhVtUgptd"
       },
@@ -491,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -518,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -607,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -665,7 +665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "cQHyc87uqAFQ"
       },
@@ -710,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -741,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "E4Quc7QXnNMl"
       },
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -849,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -903,7 +903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -972,7 +972,7 @@
         "id": "pCIKXHxu118W",
         "outputId": "7446f31e-815a-4c8d-fc68-705a157eb577"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1011,7 +1011,7 @@
         "id": "jO7q8nUBcYAQ",
         "outputId": "6d750883-f706-4381-ff5b-2e50f64f0224"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,7 +1078,7 @@
         "id": "GuKWNTK8gIf_",
         "outputId": "e511661c-431f-4069-808c-3d97019cc9d3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1163,7 @@
         "id": "6K30_1hzjUhb",
         "outputId": "156aedd0-57b3-44e9-a850-2f3e430d0a26"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,7 +1252,7 @@
         },
         "outputId": "4f6aeae9-b6ae-4c6e-b3a7-c3fbed6ad6c5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1320,7 +1320,7 @@
         "id": "FVdYLk_4eDFv",
         "outputId": "017a2a0c-6a4d-495c-e84c-b10e4a4f78fb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1367,7 +1367,7 @@
         "id": "6crEe9MUGsSq",
         "outputId": "2ca782a6-2977-41b6-b971-50671917ea7b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,7 +1394,7 @@
         "id": "ny4e6uSrH4IB",
         "outputId": "213143c2-1d02-4168-a9f7-70208a7cb638"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1427,7 +1427,7 @@
         "id": "Z0bQUBvKIZoS",
         "outputId": "65e15394-5034-4c42-fed0-fe54261d3897"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1667,7 +1667,7 @@
         "id": "cFDVvZnLNSD7",
         "outputId": "f0cfb3ec-5744-49bf-e548-374761d14fd8"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1702,7 +1702,7 @@
       "metadata": {
         "id": "VOPpLEioft4q"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1732,7 +1732,8 @@
         "# 还有几个没有优化的:1. 非线性激活 2.LayerNorm 3. MultiHead\n",
         "# 看了下Andrej老师的notebook，step5000 trainloss能降到1.6,valloss能降到1.8\n",
         "# 这里可能有2个原因，1是数据集毛爷爷的诗还是不够多，然后vocab比英语的chars要大不少；2是代码有bug，\n",
-        "# 但是还是要想明白一点，预训练和SFT可能不太一样，loss不可能逼近0，因为譬如第一个字去预测第二个字，总是会有loss的，加大block_size，平均下来应该能降低一些loss"
+        "# 但是还是要想明白一点，预训练和SFT可能不太一样，loss不可能逼近0，因为譬如第一个字去预测第二个字，总是会有loss的，加大block_size，平均下来应该能降低一些loss\n",
+        "# 最后通过记录模型参数(太小)发现还是代码有bug，`Block` 实例中的参数，如果不加上nn.ModuleList,不会被 `model.parameters()` 方法捕获，也不会参与优化过程。"
       ],
       "metadata": {
         "colab": {
@@ -1741,7 +1742,7 @@
         "id": "1wnembm7NmIx",
         "outputId": "59095801-a708-49b6-a431-94235d633523"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1814,7 +1815,7 @@
         "id": "WJZssbgYO-Zz",
         "outputId": "deaf0f65-16fd-47a3-cc1c-db0a15d4baff"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1920,7 +1921,7 @@
       "collapsed_sections": [
         "T7Lsk5R91v2y"
       ],
-      "authorship_tag": "ABX9TyOsVulvZxMlYENsIkDzgAnL",
+      "authorship_tag": "ABX9TyP4BImPfoLFA6XDK+Fu/HKF",
       "include_colab_link": true
     },
     "kernelspec": {
